--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Our Menu</h1>
             <div class="main">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4">
                             <div class="p1" >
                                 <h2 id="chicken">Chicken</h2>
                                 <p id="pa"> 
@@ -20,7 +20,7 @@
                                     Repellendus sequi quis iste, facere ad accusamus asperiores. Dolor amet, nulla hic itaque inventore vero assumenda ab atque eaque asperiores similique maiores litia alias nobis neque!</p>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-lg-4 ">
                             <div class="p2">
                                 <h2 id="beef">Beef</h2>
                                 <p id="pb"> 
@@ -31,7 +31,7 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-lg-4 ">
                             <div class="p3">
                                 <h2 id="sushi">Sushi</h2>
                                 <p id="pc"> 
